--- a/FYP-web/Homepage/faq.html
+++ b/FYP-web/Homepage/faq.html
@@ -44,7 +44,7 @@
     </nav>
 
     <div class="faq-wrapper">
-      <h1>frequently asked question</h1>
+      <h1>Frequently Asked Question</h1>
       <p class="email-contact">
         for any other questions, e-mail us at
         <a href="mailto:sso.alamsutera@binus.edu">sso.alamsutera@binus.edu</a>
@@ -62,16 +62,16 @@
       <div class="faq-container">
         <div class="faq-item">
           <div class="faq-question">
-            <span>what is fl and what do they do?</span>
+            <span>What is FL and what do they do?</span>
             <span class="faq-toggle">+</span>
           </div>
           <div class="faq-answer">
             <p>
-              freshmen leader (fl) is one of the roles in the whole fyp series.
-              fls are basically the first people freshmen will interact with
-              during orientation. for about a week, fls will help guide and lead
+              Freshmen leader (FL) is one of the roles in the whole fyp series.
+              FLs are basically the first people freshmen will interact with
+              during orientation. For about a week, FLs will help guide and lead
               freshmen to adjust to college life, understand and apply binus
-              core values (like bga, spirit, etc.), and make sure everything
+              core values (like BGA, SPIRIT, etc.), and make sure everything
               runs smoothly during orientation.
             </p>
           </div>
@@ -79,53 +79,53 @@
 
         <div class="faq-item">
           <div class="faq-question">
-            <span>what are the benefits of being an fl or fp?</span>
+            <span>What are the benefits of being an FL or FP?</span>
             <span class="faq-toggle">+</span>
           </div>
           <div class="faq-answer">
             <p>
-              there's a bunch of perks you get if you join as an fl or fp.
-              things like certificates, sat points (for fl), community service
-              points (for fp), and of course a lot of soft skills you'll develop
-              from the experience. you'll also get a lanyard, t-shirt (for fl),
-              and exclusive apparel (for fp) that looks super cool. that's it?
-              nopeee, you'll also get free parking during your time as an fl or
-              fp. pretty nice right?
+              There's a bunch of perks you get if you join as an FL or FP.
+              Things like certificates, SAT points (for FL), community service
+              points (for FP), and of course a lot of soft skills you'll develop
+              from the experience. you'll also get a lanyard, t-shirt (for FL),
+              and exclusive apparel (for FP) that looks super cool. That's it?
+              Nopeee, you'll also get free parking during your time as an FL or
+              FP. Pretty nice right?
             </p>
           </div>
         </div>
 
         <div class="faq-item">
           <div class="faq-question">
-            <span>how to sign up as fl or fp?</span>
+            <span>How to sign up as FL or FP?</span>
             <span class="faq-toggle">+</span>
           </div>
           <div class="faq-answer">
             <p>
-              if you wanna sign up, just go to freshmen.apps.binus.ac.id (if
-              it's slow or error try incognito or a different browser). then go
+              If you wanna sign up, just go to freshmen.apps.binus.ac.id (if
+              it's slow or error try incognito or a different browser). Then go
               to 'student registration' and make sure the role at the top is set
-              to 'freshmen chaperone'. don't forget to click 'search'. scroll
-              down and you'll see the open recruitment poster for fl and fp,
-              read it to check the requirements. then scroll a bit more and
-              you'll see the personal info form. fill that honestly, choose the
-              role you want (fl or fp), and upload your cv.
+              to 'freshmen chaperone'. Don't forget to click 'search'. Scroll
+              down and you'll see the open recruitment poster for FL and FP,
+              read it to check the requirements. Then scroll a bit more and
+              you'll see the personal info form. Fill that honestly, choose the
+              role you want (FL or FP), and upload your CV.
             </p>
             <p>
-              once everything's filled, double-check and just hit submit. don't
+              Once everything's filled, double-check and just hit submit. Don't
               forget to pick your interview schedule in the 'schedule selection'
-              menu. if you're applying for both fl and fp, choose the same
-              schedule twice and don't forget to change the role each time to fl
-              and fp. you can still reschedule later if needed. after that,
+              menu. If you're applying for both FL and FP, choose the same
+              schedule twice and don't forget to change the role each time to FL
+              and FP. You can still reschedule later if needed. After that,
               you'll be contacted or added to a candidate group by your
-              department's fypl.
+              department's FYPL.
             </p>
           </div>
         </div>
 
         <div class="faq-item">
           <div class="faq-question">
-            <span>how's the selection process for fl and fp?</span>
+            <span>How's the selection process for FL and FP?</span>
             <span class="faq-toggle">+</span>
           </div>
           <div class="faq-answer">
@@ -146,14 +146,14 @@
         <div class="faq-item">
           <div class="faq-question">
             <span
-              >on the freshmen apps, there's a question “do you want to be a
+              >On the freshmen apps, there's a question “do you want to be a
               mentor?” what's that about?</span
             >
             <span class="faq-toggle">+</span>
           </div>
           <div class="faq-answer">
             <p>
-              the “mentor” here is a different role offered by binus, usually
+              The “mentor” here is a different role that offered by BINUS, usually
               for 1 semester. you can read more about it at:
               support.binus.ac.id/article/mentor-tutor-duta-binusian if you're
               interested in that too, you can click 'yes'. don't worry, it won't
