--- a/FYP-web/Homepage/fyp.html
+++ b/FYP-web/Homepage/fyp.html
@@ -45,7 +45,7 @@
 
     <div class="first-card">
       <div>
-        <h1>what is fyp?</h1>
+        <h1>What is fyp?</h1>
         <p>your first step into the binusian journey.</p>
         <p>a space to explore, connect, and grow—without the pressure.</p>
         <p>
@@ -64,39 +64,39 @@
     <div class="main-wrapper" id="timeline-sec">
       <div class="timeline-container">
         <div class="timeline-title">
-          <span>f</span>
-          <span>y</span>
-          <span>p</span>
+          <span>F</span>
+          <span>Y</span>
+          <span>P</span>
         </div>
         <div class="timeline">
           <div class="timeline-item">
             <div class="timeline-dot"></div>
             <div class="timeline-content">
-              <div class="timeline-text">pre fyp</div>
+              <div class="timeline-text">Pre FYP</div>
             </div>
           </div>
           <div class="timeline-item">
             <div class="timeline-dot"></div>
             <div class="timeline-content">
-              <div class="timeline-text">kick off fypl - fl - fp</div>
+              <div class="timeline-text">Kick off FYPL - FL - FP</div>
             </div>
           </div>
           <div class="timeline-item">
             <div class="timeline-dot"></div>
             <div class="timeline-content">
-              <div class="timeline-text">training fl fp</div>
+              <div class="timeline-text">Training FL FP</div>
             </div>
           </div>
           <div class="timeline-item">
             <div class="timeline-dot"></div>
             <div class="timeline-content">
-              <div class="timeline-text">briefing fl fypl</div>
+              <div class="timeline-text">Briefing FL FYPL</div>
             </div>
           </div>
           <div class="timeline-item">
             <div class="timeline-dot"></div>
             <div class="timeline-content">
-              <div class="timeline-text">opening fyp b2029</div>
+              <div class="timeline-text">Opening FYP B2029</div>
             </div>
           </div>
           <div class="timeline-item">
@@ -108,7 +108,7 @@
           <div class="timeline-item">
             <div class="timeline-dot"></div>
             <div class="timeline-content">
-              <div class="timeline-text">academic experience</div>
+              <div class="timeline-text">Academic Experience</div>
             </div>
           </div>
           <div class="timeline-item">
@@ -120,7 +120,7 @@
           <div class="timeline-item">
             <div class="timeline-dot"></div>
             <div class="timeline-content">
-              <div class="timeline-text">inaguration</div>
+              <div class="timeline-text">Inaguration</div>
             </div>
           </div>
         </div>
@@ -128,7 +128,7 @@
     </div>
 
     <div class="testimonial" id="content-section">
-      <h1>chaperone insight</h1>
+      <h1>Chaperone Insight</h1>
       <p>what ex f.chaperone says?</p>
       <div class="card-testi">
         <img src="assets/shae-testi.png" alt="" />
@@ -139,14 +139,14 @@
     <div class="card-faq">
       <div>
         <h1>want to know</h1>
-        <h1>more about fyp?</h1>
+        <h1>more about FYP?</h1>
       </div>
 
       <a href="./faq.html">click here!</a>
     </div>
 
     <div class="register-card">
-      <h1>register now!</h1>
+      <h1>Register Now!</h1>
       <a href="https://freshmen.apps.binus.ac.id">go to freshman apps</a>
     </div>
 
