--- a/FYP-web/Homepage/fypl.html
+++ b/FYP-web/Homepage/fypl.html
@@ -23,7 +23,7 @@
   <body>
     <nav id="navbar-container">
       <a href="./fyp.html" id="logo-fypl"
-        ><img src="assets/logo.png" alt="logo" id="logo-nav"
+        ><img src="assets/Logo.png" alt="logo" id="logo-nav"
       /></a>
 
       <div>
@@ -55,7 +55,7 @@
             <p>making deals across the world</p>
             <div class="card-fypl">
               <div class="fypl-solo" id="card1">
-                <img src="assets/shae-gbm.JPG" alt="" />
+                <img src="assets/shae-gbm.png" alt="" />
                 <p>shaena fazila rachman</p>
               </div>
               <div class="confetti-container" id="confettiContainer1"></div>
@@ -70,7 +70,7 @@
             <p>leading chaos, one plan daily</p>
             <div class="card-fypl">
               <div class="fypl-solo" id="card2">
-                <img src="assets/alysia-management.JPG" alt="" />
+                <img src="assets/alysia-management.png" alt="" />
                 <p>alysia kharlotta</p>
               </div>
               <div class="confetti-container" id="confettiContainer2"></div>
@@ -85,7 +85,7 @@
             <p>start stuff, break rules, repeat</p>
             <div class="card-fypl">
               <div class="fypl-solo" id="card3">
-                <img src="assets/fadil-bc.JPG" alt="" />
+                <img src="assets/fadil-bc.png" alt="" />
                 <p>muhammad fadhil habi</p>
               </div>
               <div class="confetti-container" id="confettiContainer3"></div>
@@ -100,7 +100,7 @@
             <p>lights, camera, chaos, and vibes</p>
             <div class="card-fypl">
               <div class="fypl-solo" id="card4">
-                <img src="assets/vanya-film.JPG" alt="" />
+                <img src="assets/vanya-film.png" alt="" />
                 <p>vanya aurelia budiman</p>
               </div>
               <div class="confetti-container" id="confettiContainer4"></div>
@@ -115,7 +115,7 @@
             <p>numbers whisper, we make sense</p>
             <div class="card-fypl">
               <div class="fypl-solo" id="card5">
-                <img src="assets/nat-soa.JPG" alt="" />
+                <img src="assets/nat-soa.png" alt="" />
                 <p>nathalie audrey christabel gultom</p>
               </div>
               <div class="confetti-container" id="confettiContainer5"></div>
@@ -131,7 +131,7 @@
             <p>we make pixels talk loud</p>
             <div class="card-fypl">
               <div class="fypl-solo" id="card6">
-                <img src="assets/jo-dkv.JPG" alt="" />
+                <img src="assets/jo-dkv.png" alt="" />
                 <p>jonathan lin</p>
               </div>
               <div class="confetti-container" id="confettiContainer6"></div>
@@ -147,7 +147,7 @@
             <p>talk smooth, host cooler than ice</p>
             <div class="card-fypl">
               <div class="fypl-solo" id="card7">
-                <img src="assets/hibran-hotel.JPG" alt="" />
+                <img src="assets/hibran-hotel.png" alt="" />
                 <p>hibran aditira</p>
               </div>
               <div class="confetti-container" id="confettiContainer7"></div>
@@ -162,7 +162,7 @@
             <p>build things, break sleep schedules</p>
             <div class="card-fypl">
               <div class="fypl-solo" id="card8">
-                <img src="assets/nandya_foe.JPG" alt="" />
+                <img src="assets/nandya_foe.png" alt="" />
                 <p>nandya zahra armevia</p>
               </div>
               <div class="confetti-container" id="confettiContainer8"></div>
@@ -177,7 +177,7 @@
             <p>feelings, thoughts, and deep dives</p>
             <div class="card-fypl">
               <div class="fypl-solo" id="card9">
-                <img src="assets/ancilla-foh.JPG" alt="" />
+                <img src="assets/ancilla-foh.png" alt="" />
                 <p>maura ancilla paramaputri</p>
               </div>
               <div class="confetti-container" id="confettiContainer9"></div>
@@ -193,12 +193,12 @@
             <p>global hustle, local impact vibes</p>
             <div class="card-fypl">
               <div class="fypl-left" id="card10">
-                <img src="assets/jess.JPG" alt="" />
+                <img src="assets/jess.png" alt="" />
                 <p>jessica trishya hendra w.</p>
               </div>
               <div class="confetti-container" id="confettiContainer10"></div>
               <div class="fypl-right" id="card11">
-                <img src="assets/geb.JPG" alt="" />
+                <img src="assets/geb.png" alt="" />
                 <p>gabriel felande aulia</p>
               </div>
               <div class="confetti-container" id="confettiContainer11"></div>
@@ -214,12 +214,12 @@
             <p>why sql, python feels like nuts?</p>
             <div class="card-fypl">
               <div class="fypl-left" id="card12">
-                <img src="assets/vin.JPG" alt="" />
+                <img src="assets/vin.png" alt="" />
                 <p>vincent</p>
               </div>
               <div class="confetti-container" id="confettiContainer12"></div>
               <div class="fypl-right" id="card13">
-                <img src="assets/bagas.JPG" alt="" />
+                <img src="assets/bagas.png" alt="" />
                 <p>benedictus bagas putra h.</p>
               </div>
               <div class="confetti-container" id="confettiContainer13"></div>
@@ -235,12 +235,12 @@
             <p>code-ing nerds? here's the peoples</p>
             <div class="card-fypl">
               <div class="fypl-left" id="card14">
-                <img src="assets/juan-socs.JPG" alt="" />
+                <img src="assets/juan-socs.png" alt="" />
                 <p>juan ariviano c.</p>
               </div>
               <div class="confetti-container" id="confettiContainer14"></div>
               <div class="fypl-right" id="card15">
-                <img src="assets/teo-socs.JPG" alt="" />
+                <img src="assets/teo-socs.png" alt="" />
                 <p>teo apriyandi</p>
               </div>
               <div class="confetti-container" id="confettiContainer15"></div>
