--- a/FYP-web/Homepage/faq.html
+++ b/FYP-web/Homepage/faq.html
@@ -130,14 +130,14 @@
           </div>
           <div class="faq-answer">
             <p>
-              the selection usually starts about a week after registration
-              opens. once you've signed up, you'll be invited to a group by your
-              department's fypl, and they'll give you all the details about the
-              interview schedule, room, and technical stuff. if you've chosen
+              The selection usually starts about a week after registration
+              opens. Once you've signed up, you'll be invited to a group by your
+              department's FYPL, and they'll give you all the details about the
+              interview schedule, room, and technical stuff. If you've chosen
               your interview slot, just show up on time and at the right place.
               after the interview, you'll need to wait for the results which
-              will be reviewed by sso and your department—it might take about
-              1-2 months. the results will be sent to your binus email, so keep
+              will be reviewed by SSO and your department—it might take about
+              1-2 months. the results will be sent to your BINUS email, so keep
               checking it!
             </p>
           </div>
@@ -165,18 +165,18 @@
         <div class="faq-item">
           <div class="faq-question">
             <span
-              >can 4th semester students still apply as fp even if they'll be
+              >Can 4th semester students still apply as FP even if they'll be
               doing internships?</span
             >
             <span class="faq-toggle">+</span>
           </div>
           <div class="faq-answer">
             <p>
-              yup, totally can. even if you're interning, you still need to lead
+              Yup, totally can. Even if you're interning, you still need to lead
               the eese 2 sessions (which happens while you're interning), but
-              eese 2 meetings are not as intense or frequent as eese 1. for
+              eese 2 meetings are not as intense or frequent as EESE 1. As for
               example, you might only need to do a session once every 1-3 weeks,
-              compared to weekly meetings in eese 1. you'll just need to come to
+              compared to weekly meetings in EESE 1. You'll just need to come to
               campus to check in manually for each session.
             </p>
           </div>
@@ -184,21 +184,21 @@
 
         <div class="faq-item">
           <div class="faq-question">
-            <span>what's the difference between fl and fp?</span>
+            <span>What's the difference between FL and FP?</span>
             <span class="faq-toggle">+</span>
           </div>
           <div class="faq-answer">
             <p>
-              the main difference is the timing of your duties. fl works during
-              orientation until inauguration, while fp is active throughout the
-              excellent program—around a year during the freshman's 1st and 2nd
-              semesters. the job is different too—fls help manage freshmen and
-              make sure the orientation events run well. usually, you'll be
-              assigned to a class along with other fls and help guide freshmen
-              during that week. fps, on the other hand, are more like mentors
-              during the whole academic year. you'll help your class throughout
+              The main difference is the timing of your duties. FL works during
+              orientation until inauguration, while FP is active throughout the
+              excellent program—around a year during the freshmen's 1st and 2nd
+              semesters. the job is different too—FLs help manage freshmen and
+              make sure the orientation events run well. Usually, you'll be
+              assigned to a class along with other FLs and help guide freshmen
+              during that week. FPs, on the other hand, are more like mentors
+              during the whole academic year. You'll help your class throughout
               the excellent program, guide them during uni life, and be their
-              go-to person. benefits are also different—fps get community
+              go-to person. Benefits are also different—FPs get community
               service points, while fls get sat points.
             </p>
           </div>
@@ -206,19 +206,19 @@
 
         <div class="faq-item">
           <div class="faq-question">
-            <span>when does next b29 start?</span>
+            <span>When does next B29 start?</span>
             <span class="faq-toggle">+</span>
           </div>
           <div class="faq-answer">
             <p>
-              new student experience & transition (next), which used to be
-              called 'otp', will be held from august 18 to 27, then followed by
-              academic experience and inauguration on september 4. so only one
+              New student experience & transition (NEXT), which used to be
+              called 'otp', will be held from August 18 to 27, then followed by
+              academic experience and inauguration on september 4. So only one
               batch of next this year? yup, next is gonna be held in just one
               batch, but don't worry it's still gonna be super fun and full of
-              experience. fls will be the ones leading it, so if you're planning
-              to be an fl, make sure your schedule is free from august to
-              september, okay?
+              experience. FLs will be the ones leading it, so if you're planning
+              to be an FL, make sure your schedule is free from august to
+              September, okay?
             </p>
           </div>
         </div>
@@ -233,7 +233,7 @@
 
     <div class="register-card">
       <h1>register now!</h1>
-      <a href="https://freshmen.apps.binus.ac.id">go to freshman apps</a>
+      <a href="https://freshmen.apps.binus.ac.id">go to freshmen apps</a>
     </div>
 
     <footer>
