--- a/FYP-web/Homepage/fyp.html
+++ b/FYP-web/Homepage/fyp.html
@@ -147,7 +147,7 @@
 
     <div class="register-card">
       <h1>Register Now!</h1>
-      <a href="https://freshmen.apps.binus.ac.id">go to freshman apps</a>
+      <a href="https://freshmen.apps.binus.ac.id">go to freshmen apps</a>
     </div>
 
     <footer>
