--- a/FYP-web/Homepage/fypl.html
+++ b/FYP-web/Homepage/fypl.html
@@ -259,7 +259,7 @@
 
     <div class="register-card">
       <h1>register now!</h1>
-      <a href="https://freshmen.apps.binus.ac.id">go to freshman apps</a>
+      <a href="https://freshmen.apps.binus.ac.id">go to freshmen apps</a>
     </div>
 
     <footer>
