--- a/FYP-web/Homepage/fypl.html
+++ b/FYP-web/Homepage/fypl.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap"
       rel="stylesheet"
     />
-    <title>fypl</title>
+    <title>FYPL</title>
   </head>
   <body>
     <nav id="navbar-container">
@@ -28,10 +28,10 @@
 
       <div>
         <ul id="resp-nav">
-          <li><a href="./fyp.html">fyp</a></li>
-          <li><a href="./faq.html">faq</a></li>
-          <li><a href="./fypl.html">fypl</a></li>
-          <li><a href="https://freshmen.apps.binus.ac.id">register</a></li>
+          <li><a href="./fyp.html">FYP</a></li>
+          <li><a href="./faq.html">FAQ</a></li>
+          <li><a href="./fypl.html">FYPL</a></li>
+          <li><a href="https://freshmen.apps.binus.ac.id">Register</a></li>
           <a href="#" id="close"
             ><img src="assets/x-button.png" alt=""
           /></a>
@@ -50,13 +50,13 @@
         <!-- First slide -->
         <div class="carousel-slide">
           <div class="container-fypl">
-            <h1>global business</h1>
-            <h1>management</h1>
-            <p>making deals across the world</p>
+            <h1>Global Business</h1>
+            <h1>Marketing</h1>
+            <p>Making Deals Across the World</p>
             <div class="card-fypl">
               <div class="fypl-solo" id="card1">
                 <img src="assets/shae-gbm.JPG" alt="" />
-                <p>shaena fazila rachman</p>
+                <p>Shaena Fazila Rachman</p>
               </div>
               <div class="confetti-container" id="confettiContainer1"></div>
             </div>
@@ -66,12 +66,12 @@
         <!-- Second slide -->
         <div class="carousel-slide">
           <div class="container-fypl">
-            <h1>management</h1>
-            <p>leading chaos, one plan daily</p>
+            <h1>Management</h1>
+            <p>Leading Chaos, One Plan Daily</p>
             <div class="card-fypl">
               <div class="fypl-solo" id="card2">
                 <img src="assets/alysia-management.JPG" alt="" />
-                <p>alysia kharlotta</p>
+                <p>Alysia Kharlotta</p>
               </div>
               <div class="confetti-container" id="confettiContainer2"></div>
             </div>
@@ -81,12 +81,12 @@
         <!-- Third slide -->
         <div class="carousel-slide">
           <div class="container-fypl">
-            <h1>business creation</h1>
-            <p>start stuff, break rules, repeat</p>
+            <h1>Business Creation</h1>
+            <p>Start Stuff, Break Rules, Repeat</p>
             <div class="card-fypl">
               <div class="fypl-solo" id="card3">
                 <img src="assets/fadil-bc.JPG" alt="" />
-                <p>muhammad fadhil habi</p>
+                <p>Muhammad Fadhil Habi</p>
               </div>
               <div class="confetti-container" id="confettiContainer3"></div>
             </div>
@@ -96,12 +96,12 @@
         <!-- Fourth slide -->
         <div class="carousel-slide">
           <div class="container-fypl">
-            <h1>film</h1>
-            <p>lights, camera, chaos, and vibes</p>
+            <h1>Film</h1>
+            <p>Lights, Camera, Chaos, and Vibes</p>
             <div class="card-fypl">
               <div class="fypl-solo" id="card4">
                 <img src="assets/vanya-film.JPG" alt="" />
-                <p>vanya aurelia budiman</p>
+                <p>Vanya Aurelia Budiman</p>
               </div>
               <div class="confetti-container" id="confettiContainer4"></div>
             </div>
@@ -111,12 +111,12 @@
         <!-- Fifth slide -->
         <div class="carousel-slide">
           <div class="container-fypl">
-            <h1>school of accounting</h1>
-            <p>numbers whisper, we make sense</p>
+            <h1>School of Accounting</h1>
+            <p>Numbers Whisper, We Make Sense</p>
             <div class="card-fypl">
               <div class="fypl-solo" id="card5">
                 <img src="assets/nat-soa.JPG" alt="" />
-                <p>nathalie audrey christabel gultom</p>
+                <p>Nathalie Audrey Christabel Gultom</p>
               </div>
               <div class="confetti-container" id="confettiContainer5"></div>
             </div>
@@ -126,13 +126,13 @@
         <!-- Sixth slide -->
         <div class="carousel-slide">
           <div class="container-fypl">
-            <h1>visual communication</h1>
-            <h1>design</h1>
-            <p>we make pixels talk loud</p>
+            <h1>Visual Communication</h1>
+            <h1>Design</h1>
+            <p>We Make Pixels Talk Loud</p>
             <div class="card-fypl">
               <div class="fypl-solo" id="card6">
                 <img src="assets/jo-dkv.JPG" alt="" />
-                <p>jonathan lin</p>
+                <p>Jonathan Lin</p>
               </div>
               <div class="confetti-container" id="confettiContainer6"></div>
             </div>
@@ -142,13 +142,13 @@
         <!-- Seventh slide -->
         <div class="carousel-slide">
           <div class="container-fypl">
-            <h1>f.o.d. communication</h1>
-            <h1>hotel n tourism</h1>
-            <p>talk smooth, host cooler than ice</p>
+            <h1>F.O.D. Communication</h1>
+            <h1>Hotel and Tourism</h1>
+            <p>Talk Smooth, Host Cooler than Ice</p>
             <div class="card-fypl">
               <div class="fypl-solo" id="card7">
                 <img src="assets/hibran-hotel.JPG" alt="" />
-                <p>hibran aditira</p>
+                <p>Hibran Aditira</p>
               </div>
               <div class="confetti-container" id="confettiContainer7"></div>
             </div>
@@ -158,12 +158,12 @@
         <!-- Eighth slide -->
         <div class="carousel-slide">
           <div class="container-fypl">
-            <h1>faculty of engineering</h1>
-            <p>build things, break sleep schedules</p>
+            <h1>Faculty of Engineering</h1>
+            <p>Build Things, Break Sleep Schedules</p>
             <div class="card-fypl">
               <div class="fypl-solo" id="card8">
                 <img src="assets/nandya_foe.JPG" alt="" />
-                <p>nandya zahra armevia</p>
+                <p>Nandya Zahra Armevia</p>
               </div>
               <div class="confetti-container" id="confettiContainer8"></div>
             </div>
@@ -173,12 +173,12 @@
         <!-- Ninth slide -->
         <div class="carousel-slide">
           <div class="container-fypl">
-            <h1>faculty of humanities</h1>
-            <p>feelings, thoughts, and deep dives</p>
+            <h1>Faculty of Humanities</h1>
+            <p>Feelings, Thoughts, and Deep Dives</p>
             <div class="card-fypl">
               <div class="fypl-solo" id="card9">
                 <img src="assets/ancilla-foh.JPG" alt="" />
-                <p>maura ancilla paramaputri</p>
+                <p>Maura Ancilla Paramaputri</p>
               </div>
               <div class="confetti-container" id="confettiContainer9"></div>
             </div>
@@ -188,18 +188,18 @@
         <!-- Tenth slide -->
         <div class="carousel-slide">
           <div class="container-fypl">
-            <h1>international business</h1>
-            <h1>management</h1>
-            <p>global hustle, local impact vibes</p>
+            <h1>International Business</h1>
+            <h1>Management</h1>
+            <p>Global Hustle, Local Impact Vibes</p>
             <div class="card-fypl">
               <div class="fypl-left" id="card10">
                 <img src="assets/jess.JPG" alt="" />
-                <p>jessica trishya hendra w.</p>
+                <p>Jessica Trishya Hendra W.</p>
               </div>
               <div class="confetti-container" id="confettiContainer10"></div>
               <div class="fypl-right" id="card11">
                 <img src="assets/geb.JPG" alt="" />
-                <p>gabriel felande aulia</p>
+                <p>Gabriel Felande Aulia</p>
               </div>
               <div class="confetti-container" id="confettiContainer11"></div>
             </div>
@@ -209,18 +209,18 @@
         <!-- Eleventh slide -->
         <div class="carousel-slide">
           <div class="container-fypl">
-            <h1>school of information</h1>
-            <h1>system</h1>
-            <p>why sql, python feels like nuts?</p>
+            <h1>School of Information</h1>
+            <h1>System</h1>
+            <p>Why SQL, Python Feels Like Nuts?</p>
             <div class="card-fypl">
               <div class="fypl-left" id="card12">
                 <img src="assets/vin.JPG" alt="" />
-                <p>vincent</p>
+                <p>Vincent</p>
               </div>
               <div class="confetti-container" id="confettiContainer12"></div>
               <div class="fypl-right" id="card13">
                 <img src="assets/bagas.JPG" alt="" />
-                <p>benedictus bagas putra h.</p>
+                <p>Benedictus Bagas Putra H.</p>
               </div>
               <div class="confetti-container" id="confettiContainer13"></div>
             </div>
@@ -230,18 +230,18 @@
         <!-- Twelfth slide -->
         <div class="carousel-slide">
           <div class="container-fypl">
-            <h1>school of computer</h1>
-            <h1>science</h1>
-            <p>code-ing nerds? here's the peoples</p>
+            <h1>School of Computer</h1>
+            <h1>Science</h1>
+            <p>Code-ing Nerds? Here's the Peoples</p>
             <div class="card-fypl">
               <div class="fypl-left" id="card14">
                 <img src="assets/juan-socs.JPG" alt="" />
-                <p>juan ariviano c.</p>
+                <p>Juan Ariviano C.</p>
               </div>
               <div class="confetti-container" id="confettiContainer14"></div>
               <div class="fypl-right" id="card15">
                 <img src="assets/teo-socs.JPG" alt="" />
-                <p>teo apriyandi</p>
+                <p>Teo Apriyandi</p>
               </div>
               <div class="confetti-container" id="confettiContainer15"></div>
             </div>
@@ -258,12 +258,12 @@
     </div>
 
     <div class="register-card">
-      <h1>register now!</h1>
-      <a href="https://freshmen.apps.binus.ac.id">go to freshman apps</a>
+      <h1>Register Now!</h1>
+      <a href="https://freshmen.apps.binus.ac.id">Go to Freshman Apps</a>
     </div>
 
     <footer>
-      <p>see you in fyp! - @efwaipiel.alsut</p>
+      <p>See You in FYP! - @efwaipiel.alsut</p>
       <a
         href="https://www.instagram.com/efwaipiel.alsut?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
         ><img src="assets/instagram.png" alt="instagram-logo"
