--- a/FYP-web/Homepage/index.html
+++ b/FYP-web/Homepage/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap"
       rel="stylesheet"
     />
-    <title>efwaipiel - alam sutera</title>
+    <title>FYPL - Alam Sutera</title>
   </head>
     <!-- <nav id="navbar-container">
       <a href="./index.html" id="logo-fypl"><img src="assets/logo.PNG" alt="logo" id="logo-nav"
@@ -40,9 +40,9 @@
     </nav> -->
 
     <div class="title-home">
-      <h1>courious about-</h1>
-      <h1>fyp orientation?</h1>
-      <a href="./fyp.html">find your answer here!</a>
+      <h1>Curious About-</h1>
+      <h1>FYP Orientation?</h1>
+      <a href="./fyp.html">Find Your Answer Here!</a>
     </div>
 
     <script src="./script.js"></script>
