--- a/FYP-web/Homepage/fyp.html
+++ b/FYP-web/Homepage/fyp.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap"
       rel="stylesheet"
     />
-    <title>fyp</title>
+    <title>FYP</title>
   </head>
   <body>
     <nav id="navbar-container">
@@ -28,10 +28,10 @@
 
       <div>
         <ul id="resp-nav">
-          <li><a href="./fyp.html">fyp</a></li>
-          <li><a href="./faq.html">faq</a></li>
-          <li><a href="./fypl.html">fypl</a></li>
-          <li><a href="https://freshmen.apps.binus.ac.id">register</a></li>
+          <li><a href="./fyp.html">FYP</a></li>
+          <li><a href="./faq.html">FAQ</a></li>
+          <li><a href="./fypl.html">FYPL</a></li>
+          <li><a href="https://freshmen.apps.binus.ac.id">Register</a></li>
           <a href="#" id="close"
             ><img src="assets/x-button.png" alt=""
           /></a>
@@ -45,19 +45,19 @@
 
     <div class="first-card">
       <div>
-        <h1>What is fyp?</h1>
-        <p>your first step into the binusian journey.</p>
-        <p>a space to explore, connect, and grow—without the pressure.</p>
+        <h1>What is FYP?</h1>
+        <p>Your first step into the binusian journey.</p>
+        <p>A space to explore, connect, and grow—without the pressure.</p>
         <p>
-          you'll meet awesome friends, discover new passions, and get a feel for
+          You'll meet awesome friends, discover new passions, and get a feel for
           what uni life is really like.
         </p>
         <p>
-          expect fun events, creative projects, and chill moments that help you
+          Expect fun events, creative projects, and chill moments that help you
           settle in. it's not just orientation—it's the start of something big.
         </p>
-        <p>welcome to binus, your story starts here.</p>
-        <button id="exploreButton">explore!</button>
+        <p>Welcome to BINUS, your story starts here.</p>
+        <button id="exploreButton">Explore</button>
       </div>
     </div>
 
@@ -129,7 +129,7 @@
 
     <div class="testimonial" id="content-section">
       <h1>Chaperone Insight</h1>
-      <p>what ex f.chaperone says?</p>
+      <p>What ex F.Chaperone Says?</p>
       <div class="card-testi">
         <img src="assets/shae-testi.png" alt="" />
         <img src="assets/teo-testi.png" alt="" />
@@ -138,20 +138,20 @@
 
     <div class="card-faq">
       <div>
-        <h1>want to know</h1>
-        <h1>more about FYP?</h1>
+        <h1>Want to Know</h1>
+        <h1>More About FYP?</h1>
       </div>
 
-      <a href="./faq.html">click here!</a>
+      <a href="./faq.html">Click Here</a>
     </div>
 
     <div class="register-card">
       <h1>Register Now!</h1>
-      <a href="https://freshmen.apps.binus.ac.id">go to freshman apps</a>
+      <a href="https://freshmen.apps.binus.ac.id">Go to Freshman Apps</a>
     </div>
 
     <footer>
-      <p>see you in fyp! - @efwaipiel.alsut</p>
+      <p>See You in FYP! - @efwaipiel.alsut</p>
       <a
         href="https://www.instagram.com/efwaipiel.alsut?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
         ><img src="assets/instagram.png" alt="instagram-logo"
