--- a/FYP-web/Homepage/faq.html
+++ b/FYP-web/Homepage/faq.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap"
       rel="stylesheet"
     />
-    <title>faq</title>
+    <title>FAQ</title>
   </head>
   <body>
     <nav id="navbar-container">
@@ -28,10 +28,10 @@
 
       <div>
         <ul id="resp-nav">
-          <li><a href="./fyp.html">fyp</a></li>
-          <li><a href="./faq.html">faq</a></li>
-          <li><a href="./fypl.html">fypl</a></li>
-          <li><a href="https://freshmen.apps.binus.ac.id">register</a></li>
+          <li><a href="./fyp.html">FYP</a></li>
+          <li><a href="./faq.html">FAQ</a></li>
+          <li><a href="./fypl.html">FYPL</a></li>
+          <li><a href="https://freshmen.apps.binus.ac.id">Register</a></li>
           <a href="#" id="close"
             ><img src="assets/x-button.png" alt=""
           /></a>
@@ -46,7 +46,7 @@
     <div class="faq-wrapper">
       <h1>Frequently Asked Question</h1>
       <p class="email-contact">
-        for any other questions, e-mail us at
+        For any other questions, e-mail us at
         <a href="mailto:sso.alamsutera@binus.edu">sso.alamsutera@binus.edu</a>
       </p>
 
@@ -227,17 +227,17 @@
 
     <div id="faq-button">
       <a href="https://www.instagram.com/efwaipiel.alsut?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">
-        dm us for another question
+        DM for Another Question
       </a>
     </div>
 
     <div class="register-card">
-      <h1>register now!</h1>
-      <a href="https://freshmen.apps.binus.ac.id">go to freshmen apps</a>
+      <h1>Register Now!</h1>
+      <a href="https://freshmen.apps.binus.ac.id">Go to Freshmen Apps</a>
     </div>
 
     <footer>
-      <p>see you in fyp! - @efwaipiel.alsut</p>
+      <p>See You in FYP! - @efwaipiel.alsut</p>
       <a
         href="https://www.instagram.com/efwaipiel.alsut?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
         ><img src="assets/instagram.png" alt="instagram-logo"
