--- a/FYP-web/Homepage/fyp.html
+++ b/FYP-web/Homepage/fyp.html
@@ -114,7 +114,7 @@
           <div class="timeline-item">
             <div class="timeline-dot"></div>
             <div class="timeline-content">
-              <div class="timeline-text">NEXT follow-up</div>
+              <div class="timeline-text">NEXT Follow-Up</div>
             </div>
           </div>
           <div class="timeline-item">
