--- a/FYP-web/Homepage/fypl.html
+++ b/FYP-web/Homepage/fypl.html
@@ -235,12 +235,12 @@
             <p>Code-ing Nerds? Here's the Peoples</p>
             <div class="card-fypl">
               <div class="fypl-left" id="card14">
-                <img src="assets/juan-socs.JPG" alt="" />
+                <img src="assets/juan-socs.png" alt="" />
                 <p>Juan Ariviano C.</p>
               </div>
               <div class="confetti-container" id="confettiContainer14"></div>
               <div class="fypl-right" id="card15">
-                <img src="assets/teo-socs.JPG" alt="" />
+                <img src="assets/teo-socs.png" alt="" />
                 <p>Teo Apriyandi</p>
               </div>
               <div class="confetti-container" id="confettiContainer15"></div>
