--- a/FYP-web/Homepage/fypl.html
+++ b/FYP-web/Homepage/fypl.html
@@ -55,7 +55,7 @@
             <p>Making Deals Across the World</p>
             <div class="card-fypl">
               <div class="fypl-solo" id="card1">
-                <img src="assets/shae-gbm.JPG" alt="" />
+                <img src="assets/shae-gbm.png" alt="" />
                 <p>Shaena Fazila Rachman</p>
               </div>
               <div class="confetti-container" id="confettiContainer1"></div>
@@ -70,7 +70,7 @@
             <p>Leading Chaos, One Plan Daily</p>
             <div class="card-fypl">
               <div class="fypl-solo" id="card2">
-                <img src="assets/alysia-management.JPG" alt="" />
+                <img src="assets/alysia-management.png" alt="" />
                 <p>Alysia Kharlotta</p>
               </div>
               <div class="confetti-container" id="confettiContainer2"></div>
@@ -85,7 +85,7 @@
             <p>Start Stuff, Break Rules, Repeat</p>
             <div class="card-fypl">
               <div class="fypl-solo" id="card3">
-                <img src="assets/fadil-bc.JPG" alt="" />
+                <img src="assets/fadil-bc.png" alt="" />
                 <p>Muhammad Fadhil Habi</p>
               </div>
               <div class="confetti-container" id="confettiContainer3"></div>
@@ -100,7 +100,7 @@
             <p>Lights, Camera, Chaos, and Vibes</p>
             <div class="card-fypl">
               <div class="fypl-solo" id="card4">
-                <img src="assets/vanya-film.JPG" alt="" />
+                <img src="assets/vanya-film.png" alt="" />
                 <p>Vanya Aurelia Budiman</p>
               </div>
               <div class="confetti-container" id="confettiContainer4"></div>
@@ -115,7 +115,7 @@
             <p>Numbers Whisper, We Make Sense</p>
             <div class="card-fypl">
               <div class="fypl-solo" id="card5">
-                <img src="assets/nat-soa.JPG" alt="" />
+                <img src="assets/nat-soa.png" alt="" />
                 <p>Nathalie Audrey Christabel Gultom</p>
               </div>
               <div class="confetti-container" id="confettiContainer5"></div>
@@ -131,7 +131,7 @@
             <p>We Make Pixels Talk Loud</p>
             <div class="card-fypl">
               <div class="fypl-solo" id="card6">
-                <img src="assets/jo-dkv.JPG" alt="" />
+                <img src="assets/jo-dkv.png" alt="" />
                 <p>Jonathan Lin</p>
               </div>
               <div class="confetti-container" id="confettiContainer6"></div>
@@ -147,7 +147,7 @@
             <p>Talk Smooth, Host Cooler than Ice</p>
             <div class="card-fypl">
               <div class="fypl-solo" id="card7">
-                <img src="assets/hibran-hotel.JPG" alt="" />
+                <img src="assets/hibran-hotel.png" alt="" />
                 <p>Hibran Aditira</p>
               </div>
               <div class="confetti-container" id="confettiContainer7"></div>
@@ -162,7 +162,7 @@
             <p>Build Things, Break Sleep Schedules</p>
             <div class="card-fypl">
               <div class="fypl-solo" id="card8">
-                <img src="assets/nandya_foe.JPG" alt="" />
+                <img src="assets/nandya_foe.png" alt="" />
                 <p>Nandya Zahra Armevia</p>
               </div>
               <div class="confetti-container" id="confettiContainer8"></div>
@@ -177,7 +177,7 @@
             <p>Feelings, Thoughts, and Deep Dives</p>
             <div class="card-fypl">
               <div class="fypl-solo" id="card9">
-                <img src="assets/ancilla-foh.JPG" alt="" />
+                <img src="assets/ancilla-foh.png" alt="" />
                 <p>Maura Ancilla Paramaputri</p>
               </div>
               <div class="confetti-container" id="confettiContainer9"></div>
@@ -193,12 +193,12 @@
             <p>Global Hustle, Local Impact Vibes</p>
             <div class="card-fypl">
               <div class="fypl-left" id="card10">
-                <img src="assets/jess.JPG" alt="" />
+                <img src="assets/jess.png" alt="" />
                 <p>Jessica Trishya Hendra W.</p>
               </div>
               <div class="confetti-container" id="confettiContainer10"></div>
               <div class="fypl-right" id="card11">
-                <img src="assets/geb.JPG" alt="" />
+                <img src="assets/geb.png" alt="" />
                 <p>Gabriel Felande Aulia</p>
               </div>
               <div class="confetti-container" id="confettiContainer11"></div>
@@ -214,12 +214,12 @@
             <p>Why SQL, Python Feels Like Nuts?</p>
             <div class="card-fypl">
               <div class="fypl-left" id="card12">
-                <img src="assets/vin.JPG" alt="" />
+                <img src="assets/vin.png" alt="" />
                 <p>Vincent</p>
               </div>
               <div class="confetti-container" id="confettiContainer12"></div>
               <div class="fypl-right" id="card13">
-                <img src="assets/bagas.JPG" alt="" />
+                <img src="assets/bagas.png" alt="" />
                 <p>Benedictus Bagas Putra H.</p>
               </div>
               <div class="confetti-container" id="confettiContainer13"></div>
