--- a/FYP-web/Homepage/fyp.html
+++ b/FYP-web/Homepage/fyp.html
@@ -138,8 +138,8 @@
 
     <div class="card-faq">
       <div>
-        <h1>Want to Know</h1>
-        <h1>More About FYP?</h1>
+        <h1>Want to know</h1>
+        <h1>more about FYP?</h1>
       </div>
 
       <a href="./faq.html">Click Here</a>
@@ -151,7 +151,7 @@
     </div>
 
     <footer>
-      <p>See You in FYP! - @efwaipiel.alsut</p>
+      <p>See you in FYP! - @efwaipiel.alsut</p>
       <a
         href="https://www.instagram.com/efwaipiel.alsut?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
         ><img src="assets/instagram.png" alt="instagram-logo"
