--- a/FYP-web/Homepage/faq.html
+++ b/FYP-web/Homepage/faq.html
@@ -227,7 +227,7 @@
 
     <div id="faq-button">
       <a href="https://www.instagram.com/efwaipiel.alsut?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">
-        DM for Another Question
+      DM for another question
       </a>
     </div>
 
@@ -237,7 +237,7 @@
     </div>
 
     <footer>
-      <p>See You in FYP! - @efwaipiel.alsut</p>
+      <p>See you in FYP! - @efwaipiel.alsut</p>
       <a
         href="https://www.instagram.com/efwaipiel.alsut?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
         ><img src="assets/instagram.png" alt="instagram-logo"
