--- a/FYP-web/Homepage/fypl.html
+++ b/FYP-web/Homepage/fypl.html
@@ -263,7 +263,7 @@
     </div>
 
     <footer>
-      <p>See You in FYP! - @efwaipiel.alsut</p>
+      <p>See you in FYP! - @efwaipiel.alsut</p>
       <a
         href="https://www.instagram.com/efwaipiel.alsut?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
         ><img src="assets/instagram.png" alt="instagram-logo"
