--- a/FYP-web/Homepage/fyp.html
+++ b/FYP-web/Homepage/fyp.html
@@ -120,7 +120,7 @@
           <div class="timeline-item">
             <div class="timeline-dot"></div>
             <div class="timeline-content">
-              <div class="timeline-text">Inaguration</div>
+              <div class="timeline-text">Inauguration</div>
             </div>
           </div>
         </div>
